Fix some padding issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,10 @@ section > h1 {
   border-radius: 20px;
 }
 
+.member {
+  margin-bottom: 5rem
+}
+
 @media (min-width: 1000px) {
 
   header {
